feat: Implement market server and client functionality
- Add MarketServerMain class to initialize and start the market server.
- Introduce ServerOptions class for parsing command-line arguments and managing server configurations.
- Create MarketHttpServerTest to validate server responses and functionality.
- Develop MarketRuntimeFunctions class for client-side operations including package management.
- Implement PackageDependencyPolicy to enforce dependency requirements during package installations.
- Add comprehensive tests for MarketRuntimeFunctions to ensure correct behavior without an FCL package.